header-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: header-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: header-demo
  template:
    metadata:
      labels:
        app: header-demo
    spec:
      containers:
      - name: nginx
        image: "openresty/openresty:centos"
        ports:
        - name: http
          protocol: TCP
          containerPort: 80
        volumeMounts:
        - mountPath: /usr/local/openresty/nginx/conf/nginx.conf
          name: config
          subPath: nginx.conf
      volumes:
      - name: config
        configMap:
          name: header-demo
---
apiVersion: v1
kind: Service
metadata:
  name: header-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: header-demo
